--- a/2017_01_20.html
+++ b/2017_01_20.html
@@ -4,6 +4,7 @@
   <title>Document</title>
   <link  rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="http://www.cssfontstack.com/Times-New-Roman" rel="stylesheet">
 </head>
 
 <body>
